[package]
name = "ero-blockwheel-kv"
version = "0.22.4"
authors = ["Alexey Voznyuk <me@swizard.info>"]
description = "Key/value persistent store based on `ero-blockwheel` framework."
edition = "2021"

[dependencies]
ero = { git = "https://github.com/swizard0/ero.git" }
ero-blockwheel-fs = { git = "https://github.com/swizard0/ero-blockwheel-fs.git", branch = "opt_20220816" }
alloc-pool = { git = "https://github.com/swizard0/alloc-pool.git" }
edeltraud = { git = "https://github.com/swizard0/edeltraud.git", branch = "opt_20220816" }
bntree = { git = "https://github.com/swizard0/bntree" }
o1 = { git = "https://github.com/swizard0/o1.git" }

log = "^0.4"
rand = "^0.8"
serde = "^1.0"
futures = "^0.3"
bincode = "^1.3"
serde_derive = "^1.0"

tokio = { version = "^1", features = ["full"] }

[dev-dependencies]
env_logger = "^0.9"