[package]
name = "blockwheel-kv"
version = "0.27.0"
authors = ["Alexey Voznyuk <me@swizard.info>"]
description = "Key/value persistent store based on `blockwheel-fs` framework."
edition = "2021"

[dependencies]
o1 = { git = "https://github.com/swizard0/o1.git" }
bntree = { git = "https://github.com/swizard0/bntree" }
kont-utils = { git = "https://github.com/swizard0/kont-utils.git" }
alloc-pool = { git = "https://github.com/swizard0/alloc-pool.git" }
edeltraud = { git = "https://github.com/swizard0/edeltraud.git" }
arbeitssklave = { git = "https://github.com/swizard0/arbeitssklave.git" }
blockwheel-fs = { git = "https://github.com/swizard0/blockwheel-fs.git" }

log = "^0.4"
bincode = "^1.3"

rand = { version = "^0.8", features = ["small_rng"] }
serde = { version = "^1.0", features = ["derive"] }

[dev-dependencies]
env_logger = "^0.9"